tests/ui/lint/snapshots/unnecessary_range_loop_shadowed_inner_index.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary range loop
   ╭─[test.lis:5:12]
 4 │   let flag = true
 5 │   for i in 0..xs.length() {
   ·            ───────┬──────
   ·                   ╰── can be simpler
 6 │     let _ = xs[i]
   ╰────
  help: This loop exposes the index only to access elements of `xs`. Iterate directly over the elements with `for value in xs` · code: [lint.unnecessary_range_loop]
