tests/ui/lint/snapshots/unnecessary_raw_string.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary raw string
   ╭─[test.lis:3:13]
 2 │ fn main() {
 3 │   let msg = r"hello";
   ·             ────┬───
   ·                 ╰── no backslashes
 4 │   let _ = msg
   ╰────
  help: Remove the `r` prefix. A string without backslashes does not need to be raw · code: [lint.unnecessary_raw_string]
