tests/ui/lint/snapshots/unnecessary_raw_string_empty.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary raw string
   ╭─[test.lis:3:13]
 2 │ fn main() {
 3 │   let msg = r"";
   ·             ─┬─
   ·              ╰── no backslashes
 4 │   let _ = msg
   ╰────
  help: Remove the `r` prefix. A string without backslashes does not need to be raw · code: [lint.unnecessary_raw_string]
