tests/ui/lint/snapshots/unnecessary_reference.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary `&`
   ╭─[test.lis:3:11]
 2 │ pub fn foo(x: Ref<int>) {
 3 │   let _ = &x;
   ·           ─┬
   ·            ╰── `x` is already a reference
 4 │ }
   ╰────
  help: Remove the `&` operator from `x` · code: [lint.unnecessary_reference]
