tests/ui/lint/snapshots/unnecessary_return_simple.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary `return`
   ╭─[test.lis:3:3]
 2 │ fn five() -> int {
 3 │   return 5
   ·   ────┬───
   ·       ╰── redundant in tail position
 4 │ }
   ╰────
  help: The final expression of a function is its return value. Drop `return` and keep the value · code: [lint.unnecessary_return]
